--- a/Lecture5_functions_public.ipynb
+++ b/Lecture5_functions_public.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,10 @@
     "# OUTPUT:\n",
     "# The sum of in1 and in2\n",
     "def add_two(in1, in2):\n",
-    "    if \n",
+    "    if type(in1) == str:\n",
+    "        in1 = int(in1)\n",
+    "    elif type(in2) == str:\n",
+    "        in2 = int(in2)\n",
     "    return in1 + in2"
    ]
   },
@@ -49,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -57,21 +60,19 @@
      "output_type": "stream",
      "text": [
       "6\n",
-      "5.2\n",
-      "XY\n",
-      "23\n"
+      "5.2\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'X'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 9\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(add_two(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mX\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mY\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(add_two(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m3\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(add_two(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m3\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
-      "Cell \u001b[0;32mIn[1], line 7\u001b[0m, in \u001b[0;36madd_two\u001b[0;34m(in1, in2)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21madd_two\u001b[39m(in1, in2):\n\u001b[0;32m----> 7\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m in1 \u001b[38;5;241m+\u001b[39m in2\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(add_two(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m5\u001b[39m))\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(add_two(\u001b[38;5;241m2.2\u001b[39m, \u001b[38;5;241m3\u001b[39m))\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(add_two(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mX\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mY\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(add_two(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m3\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(add_two(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m3\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+      "Cell \u001b[0;32mIn[4], line 8\u001b[0m, in \u001b[0;36madd_two\u001b[0;34m(in1, in2)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21madd_two\u001b[39m(in1, in2):\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(in1) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[0;32m----> 8\u001b[0m         in1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(in1)\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(in2) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[1;32m     10\u001b[0m         in2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(in2)\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'X'"
      ]
     }
    ],
@@ -198,9 +199,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 7\n"
+     ]
+    }
+   ],
    "source": [
     "# INPUT:\n",
     "# x, an int number\n",
@@ -209,7 +218,13 @@
     "# None\n",
     "# Instead swap the value of x and y\n",
     "def swap(x, y):\n",
-    "    pass"
+    "    temp = x\n",
+    "    x = y\n",
+    "    y = temp\n",
+    "\n",
+    "x = 5\n",
+    "y = 7\n",
+    "swap(x, y)\n"
    ]
   },
   {
@@ -325,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +349,72 @@
     "# OUTPUT;\n",
     "# The sum of the three inputs\n",
     "\n",
-    "# DEFINE HERE"
+    "# DEFINE HERE\n",
+    "\n",
+    "def myfunction(x, y = True, z = False): #Class decision: y & z are boolz\n",
+    "    return x + y + z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"bool\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m myfunction(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHello\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[6], line 9\u001b[0m, in \u001b[0;36mmyfunction\u001b[0;34m(x, y, z)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmyfunction\u001b[39m(x, y \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m, z \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m): \u001b[38;5;66;03m#Class decision: y & z are boolz\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x \u001b[38;5;241m+\u001b[39m y \u001b[38;5;241m+\u001b[39m z\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"bool\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "myfunction('Hello') #bad use example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HelloWorld:)'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfunction('Hello', \"World\", \":)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfunction(5) #True = 1, False = 0"
    ]
   },
   {
@@ -346,9 +426,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Brad says 2 + 2 = 5\n",
+      "Brad says 2 + 2 = 5\n",
+      "Brad says 5 + 2 = 2\n",
+      "Brad says 2 + 2 = 5\n",
+      "Brad says 2.00 + 002 = 5\n"
+     ]
+    }
+   ],
    "source": [
     "x = 2\n",
     "y = 2\n",
@@ -367,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,16 +473,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1, 2, 3'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# INPUT:\n",
     "# Three input numbers (x, y, z)\n",
     "# Output:\n",
     "# A CSV line containing the three values\n",
     "def CSV_format(x, y, z):\n",
-    "    pass"
+    "    return \"{}, {}, {}\".format(x, y, z)\n",
+    "\n",
+    "CSV_format(1, 2, 3)"
    ]
   },
   {
